# caruti-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Resources/Shaders/: FragmentShader.frag  VertexShader.vert
resources/models/pirate/: pirate.fbx
resources/models/rock/: rock.mtl
resources/shaders/: DepthShader.frag  DepthShader.vert  FragmentShader.frag  FramebufferScreenShader.frag  FramebufferScreenShader.vert  InstancingShader.vert  LightSourceShader.frag  LightingShader.frag  LitShader.frag  ModelLoading.frag  ModelLoading.vert  NoTextureShader.vert  ReflectionShader.frag  ReflectionShader.vert  RefractionShader.frag  RefractionShader.vert  Skybox.vert  VertexShader.vert
src/: Box.hpp  Camera.hpp  Cube.hpp  File.cpp  File.hpp  Floor.hpp  LightCube.hpp  Log.hpp  Plane.hpp  SponzaScene.hpp  Triangle.hpp  Types.hpp  main.cpp
src/Core/: DirectionalLight.hpp  Entity.hpp  Light.hpp  PointLight.hpp  Skybox.hpp
src/Graphics/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/Scenes/: CubemapScene.hpp  DenseGrassScene.hpp  EnvironmentMappingScene.hpp  FramebufferScene.hpp  InstancingScene.hpp  SemiTransparentTexturesScene.hpp  SponzaDirLightShadowScene.hpp  SponzaScene.hpp  WoodFloorWithCubesScene.hpp  WoodFloorWithCubesSceneWithShadow.hpp
third/glad/include/glad/: glad.h
third/glad/src/: glad.c
third/glfw/include/GLFW/: glfw3.h
